feat: for rpg maker mz

--- a/packages/rmmv/package.json
+++ b/packages/rmmv/package.json
@@ -17,7 +17,7 @@
     "eihigh (https://github.com/eihigh)",
     "Taku Aoi (https://aotak.me)"
   ],
-  "license": "MIT",
+  "license": "Zlib",
   "bugs": {
     "url": "https://github.com/Lunatlazur/rpgmakermv_typescript_dts/issues"
   },
