--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Lunatlazur/types",
-  "author": "aoitaku <aoitaku@gmail.com>",
-  "license": "MIT",
+  "author": "aoitaku <aoitaku@lunatlazur.com>",
+  "license": "Zlib",
   "private": true,
   "devDependencies": {
     "pixi.js": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/pako": "^2.0.3",
+    "localforage": "^1.10.0"
   }
 }
