--- a/.gitconfig
+++ b/.gitconfig
@@ -1,2 +1,2 @@
 [lfs]
-	url = https://github.com/Lunatlazur/rpgmakermv-plugins.git/info/lfs
+	url = https://github.com/Lunatlazur/rpgmaker.git/info/lfs
