--- a/packages/@configs/build-doc/package.json
+++ b/packages/@configs/build-doc/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@~/configs-ejs",
+  "name": "@~/configs-build-doc",
   "version": "1.0.0",
   "description": "",
   "author": "Taku Aoi",
   "license": "Zlib",
   "bin": {
-    "ejs": "bin/index.js"
+    "build-doc": "bin/index.js"
   },
   "type": "module",
   "dependencies": {
+    "date-fns": "^2.30.0",
     "ejs": "^3.1.9",
     "js-yaml": "^4.1.0",
     "pascal-case": "^4.0.0"
