--- a/packages/variable-observer/img/img.yml
+++ b/packages/variable-observer/img/img.yml
@@ -6,4 +6,5 @@ screenshots:
     name:ja: スクリーンショット2
     name:en: screenshot2
 credits:
-  - copyright: Gotcha Gotcha Games Inc.
+  - copyright:
+      name: Gotcha Gotcha Games Inc.
