--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   },
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "editor.fontFamily": "'更紗等幅ゴシック J', Consolas, 'Courier New', monospace"
+  "editor.fontFamily": "'更紗等幅ゴシック J', Consolas, 'Courier New', monospace",
+  "editor.fontSize": 16
 }
