--- a/packages/event-command-skip/src/plugin-meta.yml
+++ b/packages/event-command-skip/src/plugin-meta.yml
@@ -1,3 +1,12 @@
 locales: [en, ja]
 desc:en:
 desc:ja:
+usage:en:
+usage:ja:
+changelogs:
+  - version: 1.0.0
+    date: 2018-04-01
+    changes:en: |-
+      - Published.
+    changes:ja: |-
+      - 公開
