--- a/packages/resumable-message-position/src/plugin-meta.yml
+++ b/packages/resumable-message-position/src/plugin-meta.yml
@@ -1,3 +1,17 @@
 locales: [en, ja]
-desc:en:
-desc:ja:
+desc:en: |-
+  This plugin holds the position of the message when saving during an
+  event that started automatically is running for to return from that
+  position when loading.
+desc:ja: |-
+  このプラグインは自動ではじまるイベントの途中でセーブを行ったときに、表示中の
+  メッセージ位置を保持し、ロード時にその位置から復帰できるようにします。
+usage:en:
+usage:ja:
+changelogs:
+  - version: 1.0.0
+    date: 2018-04-01
+    changes:en: |-
+      - Published.
+    changes:ja: |-
+      - 公開
